src/output.txt
    Checking muzero v0.1.0 (C:\Users\sefto\Documents\RustProjects\muzero)
error[E0502]: cannot borrow `arena` as mutable because it is also borrowed as immutable
  --> src\mcts.rs:77:17
   |
47 |         let root = arena[root_index].lock().unwrap();
   |                    ----- immutable borrow occurs here
...
77 |                 arena.push(Mutex::new(child));
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
78 |                 current_node.children.push(child_index);
   |                 ------------ immutable borrow later used here

For more information about this error, try `rustc --explain E0502`.
error: could not compile `muzero` due to previous error
